# Balk

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
balk/: __init__.py  element.py  material.py  model.py  node.py  plotter.py  section.py  solver.py
balk.egg-info/: PKG-INFO  SOURCES.txt
examples/: ex01_torsion_warping.py  ex02_buckling.py
frontend/: next.config.js  package-lock.json  package.json  page.js
frontend/app/: globals.css  layout.js  page.js
tests/e2e/: test_buckling.py  test_warping.py
tests/unit/: test_core.py  test_element.py  test_solver.py
